# obj-loader-rs

./: Cargo.toml  index.html
src/: face.rs  lib.rs  mesh.rs
src/vertex/: geometric.rs  mod.rs  normal.rs  texture.rs
