[package]
name = "obj-loader"
version = "0.1.0"
edition = "2021"
authors = ["Brenden Davidson <davidson.brenden15@gmail.com>"]
description = "OBJ file loader for web applications"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
regex = "1.7.1"
wasm-bindgen = "0.2.84"
